--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -369,13 +369,18 @@ body{
 .special .timeline-arrow{
   background: image-url('special_arrow.png') no-repeat center center;
 }
-.special-badget{
+.timeline-badget{
   height: 77px;
   width: 77px;
   position: absolute;
-  background: image-url('special_badget.png') no-repeat center center;
   right: -6px;
-  top:-6px;
+  top:-6px;  
+}
+.special-badget{
+  background: image-url('special_badget.png') no-repeat center center;
+}
+.free-badget{
+  background: image-url('free-badget-mini.png') no-repeat center center;
 }
 .timeline-deal-item-bids-items{
   box-shadow: none;
@@ -1415,4 +1420,18 @@ background: image-url('arrow_right.png') no-repeat 0 0;
 .slideleft-enter.slideleft-enter-active {
   margin-left: 0px;
   transition: all 300ms ease-out;
+}
+
+
+.static-rating {
+  direction: rtl;
+  unicode-bidi: bidi-override;
+  text-align: left;
+  display: inline-block; 
+}
+.static-rating span {
+  color: #ccc; 
+}
+.static-rating span.is-active {
+  color: #FFC300 !important; 
 }
