--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,13 +11,6 @@
 
 
 
-
-
-
-
-
-
-
 <div class="main-right">
 
   <div class="right-banner">
@@ -27,93 +20,7 @@
   </div>
 
 
-  <div class="home-free-items">
-
-
-    <div class="home-module-title">Үнэгүй бараа</div>
-
-    <div class="home-free-item">
-
-      <div class="home-free-item-img">
-        <div class="home-free-item-badget"></div>
-
-        <%= image_tag('123.jpg')%>
-
-      </div>
-
-      <div class="title-1">Iphone 6 space grey</div>
-      <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
-
-      <div class="clearfix"></div>
-
-    </div>
-
-    <div class="home-free-item">
-
-      <div class="home-free-item-img">
-        <div class="home-free-item-badget"></div>
-
-        <%= image_tag('123.jpg')%>
-
-      </div>
-
-      <div class="title-1">Iphone 6 space grey</div>
-      <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
-
-      <div class="clearfix"></div>
-
-    </div>
-
-    <div class="home-free-item">
-
-      <div class="home-free-item-img">
-        <div class="home-free-item-badget"></div>
-
-        <%= image_tag('123.jpg')%>
-
-      </div>
-
-      <div class="title-1">Iphone 6 space grey</div>
-      <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
-
-      <div class="clearfix"></div>
-
-    </div>
-
-    <div class="home-free-item">
-
-      <div class="home-free-item-img">
-        <div class="home-free-item-badget"></div>
-
-        <%= image_tag('123.jpg')%>
-
-      </div>
-
-      <div class="title-1">Iphone 6 space grey</div>
-      <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
-
-      <div class="clearfix"></div>
-
-    </div>
-
-    <div class="home-free-item">
-
-      <div class="home-free-item-img">
-        <div class="home-free-item-badget"></div>
-
-        <%= image_tag('123.jpg')%>
-
-      </div>
-
-      <div class="title-1">Iphone 6 space grey</div>
-      <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
-
-      <div class="clearfix"></div>
-
-    </div>
-
-
-  </div>
+  <%= react_component("FreeItemList") %>
 
   <div class="right-banner">
 
