--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,18 +22,14 @@
       <div class="timeline-content special">
 
 
-       <a href="#" id="has-hovercard"><div class="timeline-dealer-info">
+       <div class="timeline-dealer-info hover">
 
         <div class="timeline-dealer-img"><%= image_tag('avatar.png')%></div>
         <div class="timeline-dealer-name">C.Эрдэнэ</div>
         <div class="timeline-dealer-rank-star"><%= image_tag('rank-2-5.png')%></div>
         <div class="timeline-dealer-rank-vote">Үнэлсэн: 15</div>
 
-      </div></a>
-
-
-      <div class="hovercard">
-        <div class="hovercard-content">
+        <div class="tooltip">
 
           <div class="timeline-dealer-info-img"><%= image_tag('profile-sample.png')%></div>
           <div class="timeline-dealer-info-other">
@@ -59,6 +55,7 @@
           </div>
 
         </div>
+
       </div>
 
 
