--- a/app/views/home/page2.html.erb
+++ b/app/views/home/page2.html.erb
@@ -225,6 +225,33 @@
                     <input type="text" class="form-control half-width" placeholder="Имэйл">
                 </div>
 
+                <div class="col-md-12"><div class="home-module-title sub-title">Үнэлгээ</div></div>
+
+                <div class="col-md-12">
+
+                    <div class="price-free">
+                            <label>
+                              <input type="checkbox"> Үнэгүй бараа
+                            </label>
+                    </div>
+
+
+                </div>
+                <div class="col-md-12" style="padding:10px 0 0 0;">
+
+                    
+                        <div class="form-group col-md-3">
+                            <label>Доод <a href="#">[?]</a></label>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>Дээд <a href="#">[?]</a></label>
+                            <input type="text" class="form-control ">
+                        </div>
+
+
+                </div>
+
 
                 <div class="col-md-12"><div class="home-module-title sub-title">Сонирхож буй</div></div>
 
@@ -239,10 +266,6 @@
 
                 <div class="col-md-12 text-center"><button type="button" class="btn btn-success">Хадгалах</button></div>
 
-                <button class="botTeal" id="botSimple1">Simple 1</button>
-                <button class="botTeal" id="botSimple2">Simple 2</button>
-                <button class="botTeal" id="botSimple3">Simple 3</button>
-                
 
         </div>
 
