--- a/app/views/home/page4.html.erb
+++ b/app/views/home/page4.html.erb
@@ -65,17 +65,6 @@
 
                 
 
-                <div class="col-md-12"><div class="home-module-title sub-title">Холбоо барих мэдээлэл</div></div>
-
-                <div class="form-group col-md-12">
-                    <label>Холбоо барих утас <a href="#">[?]</a></label>
-                    <input type="text" class="form-control half-width" placeholder="Холбоо барих утас">
-                </div>
-                <div class="form-group col-md-12">
-                    <label>Имэйл <a href="#">[?]</a></label>
-                    <input type="text" class="form-control half-width" placeholder="Имэйл">
-                </div>
-
 
                 <div class="hairly-line"></div>
 
@@ -104,6 +93,79 @@
 
 
     <div class="main-right">
+
+
+        <div class="home-free-items">
+
+            <div class="home-module-title">Таны тохиролцоо</div>
+
+
+            <div class="title_information"><span class="glyphicon glyphicon-info-sign"></span> Өөрийн оруулсан тохиролцоог санал болгон 
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbspилгээх</div>
+            <div class="right-deal-item">
+
+                <div class="right-deal-item-img">
+
+                    <%= image_tag('123.jpg')%>
+
+                </div>
+
+                <div class="title-1">Iphone 6 space grey</div>
+                <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
+
+                <div class="clearfix"></div>
+
+            </div>
+
+            <div class="right-deal-item">
+
+                <div class="right-deal-item-img">
+
+                    <%= image_tag('123.jpg')%>
+
+                </div>
+
+                <div class="title-1">Iphone 6 space grey</div>
+                <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
+
+                <div class="clearfix"></div>
+
+            </div>
+
+            <div class="right-deal-item">
+
+                <div class="right-deal-item-img">
+
+                    <%= image_tag('123.jpg')%>
+
+                </div>
+
+                <div class="title-1">Iphone 6 space grey</div>
+                <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
+
+                <div class="clearfix"></div>
+
+            </div>
+
+            <div class="right-deal-item">
+
+                <div class="right-deal-item-img">
+
+                    <%= image_tag('123.jpg')%>
+
+                </div>
+
+                <div class="title-1">Iphone 6 space grey</div>
+                <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
+
+                <div class="clearfix"></div>
+
+            </div>
+
+            
+
+
+        </div>
 
 
         <div class="home-free-items">
