--- a/app/views/home/page5.html.erb
+++ b/app/views/home/page5.html.erb
@@ -62,7 +62,7 @@
 
                         <div class="hairly-line"></div>
 
-                        <div class="text-center"><div class="btn btn-success" style="width:50%;">Засах</div></div>
+                        <div class="text-center"><div class="btn btn-warning" style="width:50%;">Засах</div></div>
 
 
                  </div>
@@ -87,7 +87,7 @@
 
                     <div class="hairly-line"></div>
                     <a href="#" class="btn btn-primary" role="button">Онцлох болгох</a>
-                    <a href="#" class="btn btn-success" role="button" style="float:right;margin-left:8px;">Засах</a>
+                    <a href="#" class="btn btn-warning" role="button" style="float:right;margin-left:8px;">Засах</a>
                     <a href="#" class="btn btn-danger" role="button"  style="float:right">Устгах</a>
 
                 </div>
@@ -101,7 +101,7 @@
 
                     <div class="hairly-line"></div>
                     <a href="#" class="btn btn-primary" role="button">Онцлох болгох</a>
-                    <a href="#" class="btn btn-success" role="button" style="float:right;margin-left:8px;">Засах</a>
+                    <a href="#" class="btn btn-warning" role="button" style="float:right;margin-left:8px;">Засах</a>
                     <a href="#" class="btn btn-danger" role="button"  style="float:right">Устгах</a>
 
                 </div>
@@ -115,7 +115,7 @@
 
                     <div class="hairly-line"></div>
                     <a href="#" class="btn btn-primary" role="button">Онцлох болгох</a>
-                    <a href="#" class="btn btn-success" role="button" style="float:right;margin-left:8px;">Засах</a>
+                    <a href="#" class="btn btn-warning" role="button" style="float:right;margin-left:8px;">Засах</a>
                     <a href="#" class="btn btn-danger" role="button"  style="float:right">Устгах</a>
 
                 </div>
@@ -129,7 +129,7 @@
 
                     <div class="hairly-line"></div>
                     <a href="#" class="btn btn-primary" role="button">Онцлох болгох</a>
-                    <a href="#" class="btn btn-success" role="button" style="float:right;margin-left:8px;">Засах</a>
+                    <a href="#" class="btn btn-warning" role="button" style="float:right;margin-left:8px;">Засах</a>
                     <a href="#" class="btn btn-danger" role="button"  style="float:right">Устгах</a>
 
                 </div>
@@ -143,7 +143,7 @@
 
                     <div class="hairly-line"></div>
                     <a href="#" class="btn btn-primary" role="button">Онцлох болгох</a>
-                    <a href="#" class="btn btn-success" role="button" style="float:right;margin-left:8px;">Засах</a>
+                    <a href="#" class="btn btn-warning" role="button" style="float:right;margin-left:8px;">Засах</a>
                     <a href="#" class="btn btn-danger" role="button"  style="float:right">Устгах</a>
 
                 </div>
