--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
         <div class="logo-right-category"> 
           <% unless (controller.controller_name == "home" && controller.action_name == "index") %>
           <div class='hover'>
-            <a href="#">hello</a>
+            <a href="#">Ангилал <span class="caret"></span></a>
             <div class="tooltip" style="width:250px">
               <%= react_component("CategoryMenu", url: "/rest/categories.json") %>
             </div>
