--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,37 @@
-<h2>Sign up</h2>
+<div class="main">
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <div class="container">
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+    <div class="sign-up-page">
 
-  <div><%= f.label :first_name %><br />
-  <%= f.text_field :first_name %></div>
 
-  <div><%= f.label :last_name %><br />
-  <%= f.text_field :last_name %></div>
+      <div class="sign-up-page-title">Бүртгүүлэх</div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+        <div  class="sign-up-page-input"><%= f.label :email %><br />
+        <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+        <div  class="sign-up-page-input"><%= f.label :first_name %><br />
+        <%= f.text_field :first_name %></div>
 
-<%= render "devise/shared/links" %>
+        <div  class="sign-up-page-input"><%= f.label :last_name %><br />
+        <%= f.text_field :last_name %></div>
+
+        <div  class="sign-up-page-input"><%= f.label :password %><br />
+        <%= f.password_field :password %></div>
+
+        <div  class="sign-up-page-input"><%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation %></div>
+
+        <div  class="sign-up-page-button"><%= f.submit "Sign up" %></div>
+      <% end %>
+
+      <div class="sign-up-page-links"><%= render "devise/shared/links" %></div>
+
+    </div>
+
+  </div>
+
+</div>
