--- a/app/views/home/page11.html.erb
+++ b/app/views/home/page11.html.erb
@@ -15,57 +15,35 @@
                     <%= image_tag('avatar.jpg')%>
 
                 </div>
-                <div class="profile-name">
-                    Бат-Эрдэнэ Дагвадорж
-                </div>
-                <div class="profile-rank">
-                    <div class="ranking-stars">
-                        <span class="rating">
-                                <input type="radio" class="rating-input"
-                            id="rating-input-1-5" name="rating-input-1"/>
-                                <label for="rating-input-1-5" class="rating-star"></label>
-                                <input type="radio" class="rating-input"
-                                        id="rating-input-1-4" name="rating-input-1"/>
-                                <label for="rating-input-1-4" class="rating-star"></label>
-                                <input type="radio" class="rating-input"
-                                        id="rating-input-1-3" name="rating-input-1"/>
-                                <label for="rating-input-1-3" class="rating-star"></label>
-                                <input type="radio" class="rating-input"
-                                        id="rating-input-1-2" name="rating-input-1"/>
-                                <label for="rating-input-1-2" class="rating-star"></label>
-                                <input type="radio" class="rating-input"
-                                        id="rating-input-1-1" name="rating-input-1"/>
-                                <label for="rating-input-1-1" class="rating-star"></label>
-                        </span>
+                <div class="col-md-12">
+
+                    <div class="profile-img-change">
+                        <input type="file" />
                     </div>
-                    <div class="full-detail-user-info-raters">Үнэлсэн: 5</div>
+
+                    <div class="form-group">
+                        <label for="exampleInputName2">Овог</label>
+                        <input type="text" class="form-control" placeholder="Овог">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputName2">Нэр</label>
+                        <input type="text" class="form-control" placeholder="Нэр">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputName2">Нууц үг</label>
+                        <input type="text" class="form-control" placeholder="Нууц үг">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputName2">Утас</label>
+                        <input type="text" class="form-control" placeholder="Утас">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputName2">Имэйл</label>
+                        <input type="text" class="form-control" placeholder="Имэйл">
+                    </div>
+                    <div class="hairly-line"></div>
+                    <div class="text-center"><div class="btn btn-success" style="width:50%;">Засах</div></div>
                 </div>
-                <div class="hairly-line"></div>
-
-                <ul class="nav nav-pills nav-stacked">
-                  <li role="presentation"><a href="#">Таны оруулсан тохиролцоо</a></li>
-                  <li role="presentation"><a href="#">Захиа<span class="badge">1</span></a></li>
-                  <li role="presentation" class="active"><a href="#">Ирсэн саналууд<span class="badge">5</span></a></li>
-                  <li role="presentation"><a href="#">Дугуйлсан тохиролцоо<span class="badge">5</span></a></li>
-                </ul>
-
-                <div class="hairly-line"></div>
-
-                <div class="full-detail-user-info-deals">
-
-                        <div class="full-detail-user-info-deals-reg"><span class="glyphicon glyphicon-calendar"></span> Бүртгүүлсэн: 2015.12.1</div>
-                        <div class="full-detail-user-info-deals-all-deal"><span class="glyphicon glyphicon-tags"></span> Нийт оруулсан тохиролцоо: 15</div>
-                        <div class="full-detail-user-info-deals-done-deal"><span class="glyphicon glyphicon-tag"></span> Хийгдсэн тохиролцоо: 15</div>
-                        <div class="full-detail-user-info-deals-active-deal"><span class="glyphicon glyphicon-th-list"></span> Идэвхтэй тохиролцоо: 15</div>
-                        <div class="full-detail-user-info-deals-phone"><span class="glyphicon glyphicon-phone"></span> Утас: 99119911</div>
-                        <div class="full-detail-user-info-deals-email"><span class="glyphicon glyphicon-envelope"></span> Имэйл: mail@mail.com</div>
-
-                        <div class="hairly-line"></div>
-
-                        <div class="text-center"><div class="btn btn-success" style="width:50%;">Засах</div></div>
-
-
-                 </div>
 
             </div>
 
