--- a/app/views/home/page6.html.erb
+++ b/app/views/home/page6.html.erb
@@ -75,12 +75,113 @@
 
                 <div class="home-module-title big-title">Захиа</div>
 
+                <div class="profile-message-control">
+
+                    <div class="btn-group" role="group" aria-label="...">
+                      <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></button>
+                      <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-check"></span></button>
+
+                      <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <span class="glyphicon glyphicon-cog"></span> Тохиргоо
+                          <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                          <li><a href="#">Dropdown link</a></li>
+                          <li><a href="#">Dropdown link</a></li>
+                        </ul>
+                      </div>
+                    </div>
+
+                </div>
+
                 <div class="alert alert-info" role="alert">Таньд захидал байхгүй байна.</div>
 
 
                 <div class="profile-user-messages">
 
-                    zahia
+                    <table class="table">
+                      <tr class="unread-message">
+                        <td style="width:30px;"><label><input type="checkbox"></label></td>
+                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
+                        <td style="width:80px;">2015.12.31</td>
+                      </tr>
+                      <tr class="unread-message">
+                        <td style="width:30px;"><label><input type="checkbox"></label></td>
+                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
+                        <td style="width:80px;">2015.12.31</td>
+                      </tr>
+                      <tr class="read-message">
+                        <td style="width:30px;"><label><input type="checkbox"></label></td>
+                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
+                        <td style="width:80px;">2015.12.31</td>
+                      </tr>
+                      <tr class="read-message">
+                        <td style="width:30px;"><label><input type="checkbox"></label></td>
+                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
+                        <td style="width:80px;">2015.12.31</td>
+                      </tr>
+                      <tr class="read-message">
+                        <td style="width:30px;"><label><input type="checkbox"></label></td>
+                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
+                        <td style="width:80px;">2015.12.31</td>
+                      </tr>
+                      <tr class="read-message">
+                        <td style="width:30px;"><label><input type="checkbox"></label></td>
+                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
+                        <td style="width:80px;">2015.12.31</td>
+                      </tr>
+                      <tr class="read-message">
+                        <td style="width:30px;"><label><input type="checkbox"></label></td>
+                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
+                        <td style="width:80px;">2015.12.31</td>
+                      </tr>
+                      <tr class="read-message">
+                        <td style="width:30px;"><label><input type="checkbox"></label></td>
+                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
+                        <td style="width:80px;">2015.12.31</td>
+                      </tr>
+                      <tr class="read-message">
+                        <td style="width:30px;"><label><input type="checkbox"></label></td>
+                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
+                        <td style="width:80px;">2015.12.31</td>
+                      </tr>
+                      <tr class="read-message">
+                        <td style="width:30px;"><label><input type="checkbox"></label></td>
+                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
+                        <td style="width:80px;">2015.12.31</td>
+                      </tr>
+                    </table>
+
+                    <nav>
+                      <ul class="pagination">
+                        <li>
+                          <a href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                          </a>
+                        </li>
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="#">5</a></li>
+                        <li>
+                          <a href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                          </a>
+                        </li>
+                      </ul>
+                    </nav>
 
                 </div>             
 
