--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1429,7 +1429,7 @@ background: image-url('arrow_right.png') no-repeat 0 0;
     opacity: 0 !important;
     overflow: hidden !important;
   }
-  
+
 .no-item-here{
   background: #fff;
   border-radius: 5px;
@@ -1670,6 +1670,7 @@ background: image-url('arrow_right.png') no-repeat 0 0;
 }
 .message-send-input .btn{
   margin-top: 10px;
+}
 
 .fadeInOut-enter {
   opacity: 0.01;
