--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
     <div class="sign-up-page">
 
 
-      <div class="sign-up-page-title">Бүртгүүлэх</div>
+      <div class="sign-up-page-title"><%= t('view.registration.register')%></div>
 
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
@@ -25,7 +25,7 @@
         <div  class="sign-up-page-input"><%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation %></div>
 
-        <div  class="sign-up-page-button"><%= f.submit "Sign up" %></div>
+        <div  class="sign-up-page-button"><%= f.submit t('view.registration.register') %></div>
       <% end %>
 
       <div class="sign-up-page-links"><%= render "devise/shared/links" %></div>
