--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -825,8 +825,9 @@ body{
     float: left;
     width: 17%;
     margin: 10px 10px 10px 0;
+    cursor: pointer;
   }
-  .full-detail-image-thumb .active img{
+  .full-detail-image-thumb img.active{
     border: 1px solid #1c8fff;
   }
   .full-detail-full{
@@ -1704,7 +1705,8 @@ background: image-url('arrow_right.png') no-repeat 0 0;
   direction: rtl;
   unicode-bidi: bidi-override;
   text-align: left;
-  display: inline-block; 
+  display: inline-block;
+  cursor: default;
 }
 .static-rating span {
   color: #ccc; 
@@ -1731,4 +1733,10 @@ background: image-url('arrow_right.png') no-repeat 0 0;
   width:480px;
   overflow:hidden;
   height:60px;
+}
+a.anchor {
+  display: block;
+  position: relative;
+  top: -83px;
+  visibility: hidden;
 }
