--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("ListingShowPage", listing_id: @listing.id) %>
+<%= react_component("ListingShowPage", listing_id: @listing.id, current_user_id: current_user.try(:id)) %>
