--- a/app/views/home/page12.html.erb
+++ b/app/views/home/page12.html.erb
@@ -241,7 +241,15 @@
 
                     
 
-                </div>   
+                </div>  
+
+                <div class="chat-adv">
+
+                  <%= image_tag('ad-chat.jpg')%>
+
+                </div> 
+
+                <div class="clearfix"></div>
 
                 <div class="message-send-input">
 
