--- a/app/views/home/page3.html.erb
+++ b/app/views/home/page3.html.erb
@@ -20,7 +20,7 @@
 	    	<div class="deal-full-detail-page">
 		        <div class="full-detail-images">
 		          <div class="full-detail-image-slide">
-		            <%= image_tag('1234.jpg')%>
+		          	<div class="full-detail-image-loader"></div>
 		          </div>
 		          <div class="full-detail-image-thumb">
 
