--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,26 @@
-<h2>Forgot your password?</h2>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="main">
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+	<div class="container">
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
+		<div class="login-page">
 
-<%= render "devise/shared/links" %>
+			<div class="login-page-title">Нууц үгээ мартсан</div>
+
+				<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+				  
+
+				  <div><%= f.label :email %><br />
+				  <div class="login-page-input"><%= f.email_field :email, :autofocus => true %></div></div>
+
+				  <div class="login-page-button"><%= f.submit "Нууц үг илгээх" %></div>
+				<% end %>
+
+				<div class="login-page-links"><%= render "devise/shared/links" %></div>
+
+
+		</div>
+
+	</div>
+
+</div>
