--- a/app/views/bids/show.html.erb
+++ b/app/views/bids/show.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("BidShowPage", bid_id: @bid.id) %>
+<%= react_component("BidShowPage", bid_id: @bid.id, current_user_id: current_user.try(:id)) %>
