--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("ListingNewPage", listing_id: @listing.id, p_conditions: @product_conditions, service_cat: Service::SERVICE_CATEGORY_ID) %>
+<%= react_component("ListingEditorPage", listing_id: @listing.id, p_conditions: @product_conditions, service_cat: Service::SERVICE_CATEGORY_ID, edit_mode: false) %>
